--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.4"
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "jquery": "^3.6.0",
+        "plotly.js-dist": "^2.8.3"
     }
 }
