--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
         "perfect-scrollbar": "^1.5.2",
         "postcss": "^8.3.9",
         "postcss-import": "^14.0.2",
-        "tailwindcss": "^3.0.7",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^3.0.7"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
